[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Spriteframes/Corn_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Code/Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Code/Enemies/PumpkinSprite.gd" type="Script" id=3]
[ext_resource path="res://Code/Enemies/CornWalker.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 16.482 )

[node name="CornWalker" instance=ExtResource( 2 )]
script = ExtResource( 4 )
speed = 165
health = 15.0

[node name="Sprite" parent="." index="0"]
frames = ExtResource( 1 )
animation = "Idle"
script = ExtResource( 3 )

[node name="Shape" parent="." index="1"]
position = Vector2( 0, -13.2583 )
shape = SubResource( 1 )

[node name="ChangeDirections" type="Timer" parent="." index="6"]
wait_time = 5.0
autostart = true

[node name="AttackTimer" type="Timer" parent="." index="7"]

[node name="KernalSpawn" type="Position2D" parent="." index="8"]
position = Vector2( 0, -13.0747 )

[connection signal="timeout" from="ChangeDirections" to="." method="_on_ChangeDirections_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
